20251109_メニュー共通部品化、サンプルページへの共通部品適用

--- a/header.html
+++ b/header.html
@@ -2,6 +2,6 @@
 <header>
 
 <!-- サイト名 -->
-<h1><a href="index.html">SiteName,responsive_n002</a></h1>
+<h1><a href="index.html">【Doc】演助補助ツール</a></h1>
 
 </header><!-- ▲ヘッダ▲ -->
