--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,29 @@
-﻿<!DOCTYPE html>
+﻿<!-- ▼メニュー▼ -->
+<div id="open"><span id="open-icon"></span></div>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+<div id="menu">
+<nav class="cf">
+<ul>
 
-</body>
-</html>
+<li><a href="index.html">Top</a>
+<li><a href="sample.html">sample01</a>
+<li><a href="sample02.html">sample02</a>
+
+<li><span>Illust</span>
+ <ul class="sub-menu">
+  <li><a href="#">サブメニュー1</a>
+  <li><a href="#">サブメニュー2</a>
+  <li><a href="#">サブメニュー3</a>
+ </ul>
+
+<li><span>Novel</span>
+ <ul class="sub-menu">
+  <li><a href="#">サブメニュー1</a>
+  <li><a href="#">サブメニュー2</a>
+ </ul>
+
+<li><a href="#">About(工事中)</a>
+
+</ul>
+</nav>
+</div><!-- ▲メニュー▲ -->
