--- a/menu.html
+++ b/menu.html
@@ -6,23 +6,7 @@
 <ul>
 
 <li><a href="index.html">Top</a>
-<li><a href="sample.html">sample01</a>
-<li><a href="sample02.html">sample02</a>
-
-<li><span>Illust</span>
- <ul class="sub-menu">
-  <li><a href="#">サブメニュー1</a>
-  <li><a href="#">サブメニュー2</a>
-  <li><a href="#">サブメニュー3</a>
- </ul>
-
-<li><span>Novel</span>
- <ul class="sub-menu">
-  <li><a href="#">サブメニュー1</a>
-  <li><a href="#">サブメニュー2</a>
- </ul>
-
-<li><a href="#">About(工事中)</a>
+<li><a href="requirement.html">要件定義</a>
 
 </ul>
 </nav>
