20251109_要件定義修正

--- a/requirement.html
+++ b/requirement.html
@@ -4,22 +4,30 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>----タイトル----</title>
+<title>要件定義</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
 <!-- ▼全体の囲み▼ -->
 <div id="wrapper">
-
 <div id="header"></div>
 <div id="menu"></div>
 
 <!-- ▼メイン▼ -->
 <div id="contents">
-
-<h2>見出し2:&lt;h2&gt;見出し2&lt;/h2&gt;</h2><hr>
-<h3>見出し3:&lt;h3&gt;見出し3&lt;/h3&gt;</h3><hr>
-テキストです<hr>
+<h2>要件定義</h2><hr>
+<div class="txt">
+スプレッドシートで実現している以下要件について
+ローコード開発でどこまで実現できるか検証、ローコードによるツール化の実現（スプシは横井依存）
+※【希望要件】スプシでも未実装だがあれば便利と感じた機能
+</div>
+<h3>要件</h3>
+<img src="image/a01.gif" width="11" height="9" alt=">>">基本情報の追加・更新・参照
+<br><img src="image/a01.gif" width="11" height="9" alt=">>">香盤表の作成・参照
+<br><img src="image/a01.gif" width="11" height="9" alt=">>">稽古予実の登録・参照
+<hr>
+テキストです
+<hr>
 <a href="#linktest">文字リンクです</a>(押すとページ下部に移動)<hr>
 画像リンクです<br>
 <a href="#"><img src="image/ba01.gif" width="200" height="40" alt="image"></a><hr>
