20251109_要件定義修正

--- a/requirement.html
+++ b/requirement.html
@@ -15,19 +15,22 @@
 
 <!-- ▼メイン▼ -->
 <div id="contents">
-<h2>要件定義</h2><hr>
+<h2>要件定義</h2>
 <div class="txt">
-スプレッドシートで実現している以下要件について
-ローコード開発でどこまで実現できるか検証、ローコードによるツール化の実現（スプシは横井依存）
-※【希望要件】スプシでも未実装だがあれば便利と感じた機能
+スプレッドシートで実現している以下要件についてローコード開発でどこまで実現できるか検証・整理する。
 </div>
 <h3>要件</h3>
 <img src="image/a01.gif" width="11" height="9" alt=">>">基本情報の追加・更新・参照
 <br><img src="image/a01.gif" width="11" height="9" alt=">>">香盤表の作成・参照
 <br><img src="image/a01.gif" width="11" height="9" alt=">>">稽古予実の登録・参照
+<h3>要件詳細</h3>
+<img src="image/a02.gif" width="11" height="9" alt=">>">基本情報の追加・更新・参照
 <hr>
-テキストです
+<img src="image/a02.gif" width="11" height="9" alt=">>">香盤表の作成・参照
 <hr>
+<img src="image/a02.gif" width="11" height="9" alt=">>">稽古予実の登録・参照
+<hr>
+
 <a href="#linktest">文字リンクです</a>(押すとページ下部に移動)<hr>
 画像リンクです<br>
 <a href="#"><img src="image/ba01.gif" width="200" height="40" alt="image"></a><hr>
@@ -59,9 +62,7 @@
 &lt;img src=&quot;***&quot; &nbsp;<em>class=&quot;frame&quot;</em>&gt;で画像に枠がつきます<br>
 <img src="image/sample.png" width="100" height="100" class="frame" alt="sample"><hr>
 
-<div style="height:200px"></div>
 <div id="linktest">リンク先です</div>
-<div style="height:1000px"></div>
 
 </div><!-- ▲メイン▲ -->
 
