20251109_要件定義修正

--- a/requirement.html
+++ b/requirement.html
@@ -20,15 +20,17 @@
 スプレッドシートで実現している以下要件についてローコード開発でどこまで実現できるか検証・整理する。
 </div>
 <h3>要件</h3>
-<img src="image/a01.gif" width="11" height="9" alt=">>">基本情報の追加・更新・参照
-<br><img src="image/a01.gif" width="11" height="9" alt=">>">香盤表の作成・参照
-<br><img src="image/a01.gif" width="11" height="9" alt=">>">稽古予実の登録・参照
+<img src="image/a01.gif" width="11" height="9" alt=">>"　href="#要件1">基本情報の追加・更新・参照
+<br><img src="image/a01.gif" width="11" height="9" alt=">>"　href="#要件2">香盤表の作成・参照
+<br><img src="image/a01.gif" width="11" height="9" alt=">>"　href="#要件3">稽古予実の登録・参照
 <h3>要件詳細</h3>
-<img src="image/a02.gif" width="11" height="9" alt=">>">基本情報の追加・更新・参照
+<span class="marker" id="#要件1">基本情報の追加・更新・参照</span>
 <hr>
-<img src="image/a02.gif" width="11" height="9" alt=">>">香盤表の作成・参照
 <hr>
-<img src="image/a02.gif" width="11" height="9" alt=">>">稽古予実の登録・参照
+<span class="marker" id="#要件2">香盤表の作成・参照</span>
+<hr>
+<hr>
+<span class="marker" id="#要件3">稽古予実の登録・参照</span>
 <hr>
 
 <a href="#linktest">文字リンクです</a>(押すとページ下部に移動)<hr>
