20251109_要件定義修正

--- a/requirement.html
+++ b/requirement.html
@@ -20,9 +20,9 @@
 スプレッドシートで実現している以下要件についてローコード開発でどこまで実現できるか検証・整理する。
 </div>
 <h3>要件</h3>
-<img src="image/a01.gif" width="11" height="9" alt=">>"　href="#要件1">基本情報の追加・更新・参照
-<br><img src="image/a01.gif" width="11" height="9" alt=">>"　href="#要件2">香盤表の作成・参照
-<br><img src="image/a01.gif" width="11" height="9" alt=">>"　href="#要件3">稽古予実の登録・参照
+<img src="image/a01.gif" width="11" height="9" alt=">>"><a href="#要件1">基本情報の追加・更新・参照</a>
+<br><img src="image/a01.gif" width="11" height="9" alt=">>"><a　href="#要件2">香盤表の作成・参照</a>
+<br><img src="image/a01.gif" width="11" height="9" alt=">>"><a　href="#要件3">稽古予実の登録・参照</a>
 <h3>要件詳細</h3>
 <span class="marker" id="#要件1">基本情報の追加・更新・参照</span>
 <hr>
