--- a/requirement.html
+++ b/requirement.html
@@ -24,13 +24,13 @@
 <br><img src="image/a01.gif" width="11" height="9" alt=">>"><a href="#要件2">香盤表の作成・参照</a>
 <br><img src="image/a01.gif" width="11" height="9" alt=">>"><a href="#要件3">稽古予実の登録・参照</a>
 <h3>要件詳細</h3>
-<span class="marker" id="#要件1">基本情報の追加・更新・参照</span>
+<span class="marker" id="要件1">基本情報の追加・更新・参照</span>
 <hr>
 <hr>
-<span class="marker" id="#要件2">香盤表の作成・参照</span>
+<span class="marker" id="要件2">香盤表の作成・参照</span>
 <hr>
 <hr>
-<span class="marker" id="#要件3">稽古予実の登録・参照</span>
+<span class="marker" id="要件3">稽古予実の登録・参照</span>
 <hr>
 
 <a href="#linktest">文字リンクです</a>(押すとページ下部に移動)<hr>
