20251213_設計・DB定義追加

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>演助補助ツール検討</title>
+<title>[Doc]演助補助ツール</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -18,7 +18,7 @@
 
 <!-- ▼メイン▼ -->
 <div id="contents">
-
+<!--
 <h2>First</h2>
 
 <div class="txt">
@@ -31,10 +31,14 @@
 当サイトは○○サイトです。サイト内の画像・文章の二次利用はご遠慮願います。みたいな何かを書いたり書かなかったり。<br>
 <a href="#">テキストリンク</a>はこうなりまして、<em>文章を強調</em>したり<span class="marker">マーカー風文字</span>にしたりするとこうなりますのです。
 
-<h3>更新履歴</h3>
+-->
+
+<h2>更新履歴</h2>
 <dl>
 <dt>2025/11/09</dt>
 <dd>新規作成</dd>
+<dt>2025/12/03</dt>
+<dd>要件定義修正、設計新規作成</dd>
 </dl>
 
 </div><!-- ▲メイン▲ -->
