--- a/menu.html
+++ b/menu.html
@@ -2,12 +2,30 @@
 <div id="open"><span id="open-icon"></span></div>
 
 <div id="menu">
-<nav class="cf">
-<ul>
-
-<li><a href="index.html">Top</a>
-<li><a href="requirement.html">要件定義</a>
-
-</ul>
-</nav>
+	<nav class="cf">
+		<ul>
+			<li><a href="index.html">Top</a>
+			<li><a href="requirement.html">要件定義</a>
+			<li><a href="design.html"><span>設計</span></a>
+				<ul class="sub-menu">
+					<li><a href="#要件1">基本情報の追加・更新・参照</a>
+					<li><a href="#DB">DB設計</a>
+				</ul>
+			</li>
+		</ul>
+	</nav>
 </div><!-- ▲メニュー▲ -->
+
+<!--
+<li><a href="index.html">Top</a>
+<li><a href="sample.html">sample01</a>
+<li><a href="sample02.html">sample02</a>
+
+<li><span>Illust</span>
+ <ul class="sub-menu">
+  <li><a href="#">サブメニュー1</a>
+  <li><a href="#">サブメニュー2</a>
+  <li><a href="#">サブメニュー3</a>
+ </ul>
+
+-->
