--- a/header.html
+++ b/header.html
@@ -2,6 +2,6 @@
 <header>
 
 <!-- サイト名 -->
-<h1><a href="index.html">【Doc】演助補助ツール</a></h1>
+<h1><a href="index.html">演助補助ツール</a></h1>
 
 </header><!-- ▲ヘッダ▲ -->
